# LiDAR-BASED-AUTONOMOUS-CAR

./: .gitignore  README.md  debug  notes  slam_and_navigation
my_ws/: frames_2025-08-06_12.01.38.gv  frames_2025-08-16_11.40.41.gv  frames_2025-08-21_22.17.55.gv  frames_2025-09-07_12.38.30.gv  frames_2025-09-22_18.33.54.gv  frames_2026-01-15_19.36.14.gv  frames_2026-01-15_19.45.51.gv  frames_2026-01-15_19.53.24.gv  map_1758619411.pgm  map_1758619411.yaml  map_1758619416.yaml  map_1758619421.yaml
my_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ws/log/: latest_build
my_ws/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_ws/src/log/: latest_build  latest_list
my_ws/src/my_robot_bringup/: CMakeLists.txt
my_ws/src/my_robot_bringup/config/: gazebo_bridge.yaml  my_controller.yaml  twist_mux.yaml
my_ws/src/my_robot_bringup/launch/: my_robot_gazebo.launch.py  my_robot_gazebo.launch.xml  my_robot_harware_only.xml  my_robot_sim_and_hardware.py  my_robot_sim_and_hardware.xml  twist_mux_launch.py
my_ws/src/my_robot_bringup/worlds/: og_2.sdf  og_world.sdf
my_ws/src/my_robot_description/: CMakeLists.txt
my_ws/src/my_robot_description/launch/: display.launch.py  display.launch.xml
my_ws/src/my_robot_description/rviz/: empty.rviz  rviz_config.rviz  urdf_config.rviz  urdf_config_1.rviz
my_ws/src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware.xml
my_ws/src/my_robot_hardware/include/my_robot_hardware/: my_robot_hardware.hpp
my_ws/src/my_robot_hardware/src/: my_robot_hardware.cpp
(+167 files in other folders)
